--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -561,6 +561,7 @@
                                   <li class="subMenu">
                                       <a href="#ReleaseNotes" class="heading"><span class="numbers"></span> Release Notes</a>
                                       <ul class="collapse list-unstyled collapse-1">
+                                          <li><a class="child 1" href="#Version"> Version</a></li>
                                           <li><a class="child 1" href="#Patches"> Patches & Updates</a></li>
                                           <li><a class="child 1" href="#What"> What's New</a></li>
                                           <li><a class="child 1" href="#Functionalities"> Functionalities Modified</a></li>
@@ -893,6 +894,11 @@
 
                           <div id="ReleaseNotes"  class="page-section">
                             <h3>Release Notes</h3>
+                            </div>
+
+                            <div id="Version"  class="page-section">
+                                  <h4 class="purple"><span class="numbers"></span> Version</h4>
+                                  <p>1. Version v2.1.17</p>
                             </div>
 
                             <div id="Patches"  class="page-section">
