--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2474,7 +2474,7 @@
                        <p>To automate the process of database actions related to My SQL, PostgreSQL, Oracle, and MS SQL.</p>
                        <p><strong>Properties</strong></p>
                        <p><span class="numbers"><strong>Select Database Type:</strong> Select either MySQL or PostgreSQL or Oracle or MS SQL based on the database type the user needs to work with.</p>
-                       <p><strong>Note</strong>When inserting a single quote data into Excel, Replace the single quote ' with \’.</p>
+                       <p><strong>Note</strong> When inserting a single quote data into Database, Replace the single quote ' with double quotes " ’.</p>
                      </div>
 
                        <div id="Connection"  class="page-section">
