--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2508,17 +2508,17 @@
                               <h4 class="skyBlue"> Register with E-Manager Console</h4>
 
                               <p>1. To get access to the e-manager console, goto <a  target="_blank" href="https://emanager.Techforce.ai/try/signup?subscriptionId=0">https://emanager.Techforce.ai/try/signup?subscriptionId=0 </a> enter your business email id and click on the SIGN-UP button.</p>
-                              <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="width:400px;text-align:center;border:1px solid green;margin-left:20%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img112.png' | relative_url }}" alt="image" style="text-align:center;border:1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Details </strong></p>
                               <p><span class="numbers">2.</span> Upon successful registration, you will be redirected to the page which prompts for mail verification.</p>
                               <p><span class="numbers">3.</span> Go to your registered email and click on the verification link to complete the email verification process.</p>
-                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img47.png' | relative_url }}"alt="image" class="topImg" style=" border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Verification Process </strong></p>
                               <p><span class="numbers">4.</span> Once the verification process is done, you will be redirected to the page where you need to create a password to log in.</p>
-                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Password Process </strong></p>
                               <p><span class="numbers">5.</span> Once you're done with the password process, you will be redirected to the login page.</p>
-                              <img src="{{ '/assets/images/doc-img132.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                              <img src="{{ '/assets/images/doc-img132.png' | relative_url }}"alt="image" class="topImg" style=" border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                               <p style="text-align:center;"><strong>Figure: Login Page </strong></p>
                               <p><span class="numbers">6.Once you are successfully logged in with your credentials, you will be redirected to the dashboard page.</span></p>
                            </div>
@@ -2526,7 +2526,7 @@
                            <div id="Login"  class="page-section">
                              <h4 class="skyBlue"> Login</h4>
                                <p>1. To Login into e-manager console</p>
-                               <img src="{{ '/assets/images/doc-img46.png' | relative_url }}"alt="image" class="topImg" style="width:400px; border: 1px solid green;margin-left:25%;margin-top:10px;margin-bottom:10px;">
+                               <img src="{{ '/assets/images/doc-img132.png' | relative_url }}"alt="image" class="topImg" style=" border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
                                <p style="text-align:center;"><strong>Figure: Login </strong></p>
                                <p>2. Enter the credentials and click on the login button. You can see Dashboard, Action flows, E-Worker Machines, Queues, Schedules, and Secret Vault on the left menu.</p>
                                <img src="{{ '/assets/images/doc-img127.png' | relative_url }}"alt="image" style="border: 1px solid green;margin-left:0%;margin-top:10px;margin-bottom:10px;">
